# dupcnt

./: CMakeLists.txt  LICENSE  README.md  dupcnt_core.cpp  dupcnt_core.h  input.cpp  input.h  main.cpp
FM_index/: bntseq.c  bwt.c  index_main.c
FM_index2/: FMI_search.cpp  FMI_search.h  bntseq.cpp  bntseq.h  bseq1.h  index_main.cpp  read_index_ele.cpp  read_index_ele.h  sais.h
bwalib/: bwa.c  bwa.h  kopen.c  kopen.h  utils.c  utils.h
cstl/: kstring.h  kthread.c  kthread.h
